tests/fixtures/errors/match_arm_type_mismatch.gcl
// Error: match arms return different types
dim Velocity = Length / Time;

type Impulsive {
    delta_v: Velocity,
}
type Coasting;
type ManeuverKind = Impulsive | Coasting;

param m: ManeuverKind = Coasting { };

node result: Velocity = match @m {
    Impulsive { delta_v } => delta_v,
    Coasting => 0.0,
};
